--- a/OpenstreetmapTestApp/Info.plist
+++ b/OpenstreetmapTestApp/Info.plist
@@ -15,11 +15,11 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Позвольте нам отобразить ваше местоположение на карте. Разрешите использование геолокации?</string>
 </dict>
 </plist>
